Сделал Доставка гарантия кредит + исправил иконки производителей
Сделал доставку слайдер, исправил некоторые упущения в футере и в картинки производителя.

--- a/catalog.html
+++ b/catalog.html
@@ -28,8 +28,7 @@
       </div>
     </div>
     <div class="header-bottom">
-      <div class="container">
-        <div class="header-bottom-wrapper">
+      <div class=" header-bottom-wrapper container">
           <div class="tittle">
             <p>Интернет магазин<br> строительных материалов<br> и инструментов для ремонта
             </p>
@@ -41,7 +40,7 @@
             <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
           </div>
           <div class="user-block">
-            <a href="">Равшан Джамшутович</a>
+            <a class="logoff" href="">Равшан Джамшутович</a>
             <div class="regisration">
               <a class="my-orders" href="">Мои заказы</a>
               <a class="cabinet" href="">Личный кабинет</a>
@@ -58,7 +57,7 @@
               <li><a href="#">Контакты</a></li>
             </ul>
           </nav>
-        </div>
+       
       </div>
     </div>
   </header>
