--- a/index.html
+++ b/index.html
@@ -17,19 +17,16 @@
 		-->
   <header>
     <div class="header-top">
-      <div class="container">
-        <div class="header-top-wrapper">
+      <div class=" header-top-wrapper container">
           <a class="logo btn" href="index.html">Техномарт</a>
-          <input class="search" type="search" placeholder="Поиск">
+          <input class="search" type="search" placeholder="Поиск:">
           <a class="bookmarks btn" href="#">Закладки: 0</a>
           <a class="basket btn" href="#">Корзина: 0</a>
           <a class="checkout btn" href="">Оформить заказ</a>
-        </div>
       </div>
     </div>
     <div class="header-bottom">
-      <div class="container">
-        <div class="header-bottom-wrapper">
+      <div class=" header-bottom-wrapper container">
           <div class="tittle">
             <p>Интернет магазин<br> строительных материалов<br> и инструментов для ремонта
             </p>
@@ -39,15 +36,14 @@
             <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
           </div>
           <div class="user-block">
-            <a href="">Войти</a>
-            <a href="">Регистация</a>
+            <a class="login" href="#">Войти</a>
+            <a href="#">Регистация</a>
           </div>
-        </div>
         <nav class="header-nav">
           <ul>
             <li><a href="#">Главная</a></li>
             <li><a href="#">Компания</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a href="/catalog.html">Каталог</a></li>
             <li><a href="#">Новости</a></li>
             <li><a href="#">Спецпредложения</a></li>
             <li><a href="#">Доставка</a></li>
@@ -217,33 +213,31 @@
 		Доставка Гарантия Кредит
 		-->
           <div class="service-pop">
-            <div class="service-help">
-              <input type="radio" id="delivery" name="service" checked>
-              <input type="radio" id="guaranty" name="service">
-              <input type="radio" id="credit" name="service">
-            </div>
+              <input class="visually-hidden" type="radio" id="delivery" name="service" checked>
+              <input class="visually-hidden" type="radio" id="guaranty" name="service">
+              <input class="visually-hidden" type="radio" id="credit" name="service">
             <div class="service-controls">
               <label for="delivery">Доставка</label>
               <label for="guaranty">Гарантия</label>
               <label for="credit">Кредит</label>
             </div>
-            <div class="service-help-right">
-              <div class="service-delivery">
+            <ul class="service-right">
+              <li class="service-delivery">
                 <span>Доставка</span>
                 <p>Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем, поднимая его на ваш на этаж!</p>
-              </div>
-              <div class="service-help-guaranty">
+              </li>
+              <li class="service-guaranty">
                 <span> Гарантия</span>
                 <p>
                   Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгаранием, вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-              </div>
-              <div class="service-help-Credit">
+              </li>
+              <li class="service-credit">
                 <span>Кредит</span>
                 <p>
                   Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.</p>
                 <a class="btn" href="#">Отправить заявку</a>
-              </div>
-            </div>
+              </li>
+            </ul>
           </div>
         </section>
       </div>
