--- a/index.html
+++ b/index.html
@@ -12,14 +12,37 @@
 </head>
 
 <body>
+   <!-- SVG иконки -->
+  <svg style="display:none">
+    <symbol id="icon-login" viewBox="0 0 20 17">
+      <path d="M15 8.5L6 0v6H0v5h6v6z"/>
+      <path d="M17 15h-5v2h5c2.2 0 3-1.8 3-3V3c0-1.2-.8-3-3-3h-5v2h5c.8 0 1 .7 1 1v11c0 .3-.2 1-1 1z"/>
+    </symbol>
+    <symbol id="icon-logout" viewBox="0 0 21 17">
+      <path d="M21 8.5L12.125 0v6h-6v5h6v6z"/>
+      <path d="M3.106 13.952V3.048c.018-.376.171-1.057 1.01-1.057h5.027V0H4.116C1.938 0 1.112 1.81 1.087 3.027v10.946C1.112 15.189 1.938 17 4.116 17h5.027v-1.99H4.116c-.839 0-.992-.683-1.01-1.058z"/>
+    </symbol>
+    <symbol id="icon-user" viewBox="0 0 20 18">
+      <path d="M17.881 14.166c-2.144-.735-4.256-1.666-5.207-2.39-.657-.501-.77-1.618-.517-2.415 1.118-.903 1.864-2.477 1.864-4.278C14.021 2.276 12.221 0 10 0S5.979 2.276 5.979 5.083c0 1.801.746 3.374 1.863 4.277.253.798.141 1.915-.517 2.416-.95.724-3.063 1.654-5.207 2.39S0 18 0 18h20s.025-3.099-2.119-3.834z"/>
+    </symbol>
+    <symbol id="icon-search"  viewBox="0 0 17 17">
+    <path d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
+    </symbol>
+
+  </svg>
+  <!-- SVG иконки - end -->
   <!--
 			header
 		-->
-  <header>
+  <header class="header-bot-margin">
     <div class="header-top">
       <div class=" header-top-wrapper container">
+       
         <a class="logo btn" href="index.html">Техномарт</a>
-        <input class="search" type="search" placeholder="Поиск:">
+        <form method="get" class="input-search">
+        <input class="search" type="search" name="search" id="search" placeholder="Поиск:">
+        <label class="search-label" for="search"></label>
+        </form>
         <a class="bookmarks btn" href="#">Закладки: 0</a>
         <a class="basket btn" href="#">Корзина: 0</a>
         <a class="checkout btn" href="#">Оформить заказ</a>
@@ -35,10 +58,15 @@
           <a href="tel:+78125550555">+7 (812)555-05-55 </a>
           <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
         </div>
-        <div class="user-block">
-          <a class="login" href="#">Войти</a>
-          <a href="#">Регистация</a>
-        </div>
+        <ul class="user-block">
+         <li>
+          <a class="login" href="#">
+          <svg class="icon-login" width="20" height="17">
+            <use xlink:href="#icon-login"></use>
+          </svg>Войти</a>
+          </li>
+          <li><a class="regisration-user" href="#">Регистрация</a></li>
+        </ul>
       </div>
       <nav class="header-nav container">
         <ul>
@@ -61,6 +89,7 @@
     <div class="container">
       <div class="offers">
         <div class="category category-materials">
+          <div class="flag flag-new">новинка</div>
           <h3>Материалы</h3>
           <a class="button-category" href="#">На любой вкус</a>
         </div>
@@ -79,6 +108,8 @@
             <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
             <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
           </div>
+          <label class="arrow-left" for="product-1"></label>
+          <label class="arrow-right" for="product-2"></label>
           <ul class="slider-list">
             <li class="slide1 slider-item">
               <h2>Перфораторы</h2>
@@ -114,8 +145,8 @@
         <a class="popular-button" href="#">все популярные товары </a>
       </div>
       <ul class="popular-product-list">
-        <li class="popular-product-item">
-          <div class="flag flag-new">новинка</div>
+         <li class="popular-product-item">
+          
           <div class="actions">
             <a class="in-basket" href="#">Купить</a>
             <a class="in-bookmarks" href="#">В закладки</a>
@@ -152,6 +183,7 @@
           <div class="newprice">22500 Р.</div>
         </li>
         <li class="popular-product-item">
+          <div class="flag flag-new">новинка</div>
           <div class="actions">
             <a class="in-basket" href="#">Купить</a>
             <a class="in-bookmarks" href="#">В закладки</a>
