Смотрел другие способы подключения шрифта

--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700,700i&amp;subset=cyrillic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -55,8 +54,8 @@
           </p>
         </div>
         <div class="contacts">
-          <a href="tel:+78125550555">+7 (812)555-05-55 </a>
-          <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
+          <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <p>г. Санкт-Петербург. ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <ul class="user-block">
          <li>
@@ -113,13 +112,13 @@
           <ul class="slider-list">
             <li class="slide1 slider-item">
               <h2>Перфораторы</h2>
-              <p>Настроящие мужские игрушки</p>
-              <a class="button-slider" href="#">Открыть католог</a>
+              <p>Настоящие мужские игрушки</p>
+              <a class="button-slider" href="#">Открыть каталог</a>
             </li>
             <li class="slide2 slider-item">
               <h2>Дрели</h2>
               <p>Соседям на радость!</p>
-              <a class="button-slider" href="#">Открыть католог</a>
+              <a class="button-slider" href="#">Открыть каталог</a>
             </li>
           </ul>
         </div>
@@ -154,7 +153,7 @@
           <div class="popular-image">
             <img src="img/bfg_9000.jpg" alt="Перфоратор Bosch BFG 9000" width="184" height="164">
           </div>
-          <h3>Перфоратор Bosch BFG 9000</h3>
+          <h3>Перфоратор BOSCH BFG 9000</h3>
           <div class="oldprice">32300 P.</div>
           <div class="newprice">25500 Р.</div>
         </li>
@@ -166,7 +165,7 @@
           <div class="popular-image">
             <img src="img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
           </div>
-          <h3>Перфоратор Bosch BFG 3000</h3>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
           <div class="oldprice">22500 P.</div>
           <div class="newprice">15500 Р.</div>
         </li>
@@ -178,7 +177,7 @@
           <div class="popular-image">
             <img src="img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
           </div>
-          <h3>Перфоратор Bosch BFG 6000</h3>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
           <div class="oldprice">30500 P.</div>
           <div class="newprice">22500 Р.</div>
         </li>
@@ -191,7 +190,7 @@
           <div class="popular-image">
             <img src="img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
           </div>
-          <h3>Перфоратор Bosch BFG 2000</h3>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
           <div class="oldprice"></div>
           <div class="newprice">12500 Р.</div>
         </li>
@@ -240,7 +239,7 @@
       <div class="container">
         <section class="service">
           <h2>Сервисы</h2>
-          <p class="">Хороший интернет-магазин отличается от плохого не только ценами! <br>Мы стараемся изо всех сил, чтобы сделать покупки приятными.</p>
+          <p class="">Хороший интернет-магазин отличается от плохого не только ценами! <br>Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <!--
 		Доставка Гарантия Кредит
 		-->
@@ -256,7 +255,7 @@
             <ul class="service-right">
               <li class="service-delivery">
                 <span>Доставка</span>
-                <p>Мы с удовольствием доставим ваш товар прямо к<br> вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем, <br>поднимая его на ваш на этаж!</p>
+                <p>Мы с удовольствием доставим ваш товар прямо <br>к вашему подъезду совершенно бесплатно!<br> Ведь мы неплохо заработаем, <br>поднимая его на ваш этаж!</p>
               </li>
               <li class="service-guaranty">
                 <span> Гарантия</span>
@@ -277,9 +276,9 @@
     <div class="container">
       <section class="about-company">
         <div class="about-company-left">
-          <h2>Компания "ТЕХНОМАРТ"</h2>
+          <h2>Компания «ТЕХНОМАРТ»</h2>
           <p>
-            Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br> строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+            Настоящий мужской шоппинг  начинается  здесь! Огромный выбор товаров  для ремонта и<br> строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
           </p>
           <p>
             Мы можем доставить ваш товар в самые отдаленные точки России!<br> Техномарт работает со многими транспортными компаниями:
@@ -295,7 +294,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами,<br> заехав в наш офис:</p>
           <a class="map" href="#"><img src="img/map.jpg" alt="map" width="300" height="158"></a>
-          <a class="button-about-company modal-button-link" href="#">Заблудились? напишите нам</a>
+          <a class="button-about-company modal-button-link" href="#">Заблудились? напишите нам!</a>
         </div>
       </section>
     </div>
@@ -329,7 +328,7 @@
       <div class="container">
         <div class="content-bottom-footer">
           <p class="about-contacts">
-            2010-2017 Компания "Техномарт" <br> Все права защищены
+            © 2010-2017 Компания «Техномарт» <br> Все права защищены
           </p>
           <ul class="footer-social">
             <li><a class="social-button social-button-vk" href="#">Вконтакте</a></li>
@@ -341,9 +340,9 @@
               <b>Обратная связь:</b>
               <a class="button" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
             </p>
-            <p class="footer-mail">
-              <b>Разработано:</b>
-              <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+            <p class="footer-mail footer-mail-right">
+              <b>Разработано </b>
+              <a class="button" href="https://htmlacademy.ru">htmlacademy.ru</a>
             </p>
           </div>
         </div>
@@ -447,11 +446,13 @@
     var buyLink = document.querySelectorAll(".in-basket");
     var buyPopup = document.querySelector(".modal-buy");
     var buyClose = buyPopup.querySelector(".modal-close");
-    buyLink.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      buyPopup.classList.add("modal-show");
-    });
-    buyClose.addEventListener("click", function(evt) {
+    for (var i = 0; i < buyLink.length; i++) {
+    buyLink[i].addEventListener('click', function(evt) {
+    evt.preventDefault();
+    buyPopup.classList.add('modal-show');
+  });
+};
+      buyClose.addEventListener("click", function(evt) {
       evt.preventDefault();
       buyPopup.classList.remove("modal-show");
     });
