--- a/catalog.html
+++ b/catalog.html
@@ -4,9 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&amp;subset=cyrillic" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -56,7 +55,7 @@
           </div>
           <div class="contacts">
             <div class="tel">
-              <a href="tel:+78125550555">+7 (812)555-05-55 </a>
+              <a href="tel:+78125550555">+7 (812) 555-05-55 </a>
             </div>
             <p>г. Санкт-Петербург. ул. Б. Конюшенная д. 19/8</p>
           </div>
@@ -103,7 +102,7 @@
           <li><a href="index.html"></a></li>
           <li><a href="catalog.html">Каталог</a></li>
           <li><a href="instrument">Инструмент</a></li>
-          <li class="breadcrumbs-current"><a  href="perforator">Пертфоратор</a></li>
+          <li class="breadcrumbs-current"><a  href="perforator">Перфораторы</a></li>
         </ul>
         <div class="caption">
           <h1>Перфораторы</h1>
@@ -196,9 +195,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
+                    <img src="img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
                   </div>
-                  <h3>Перфоратор Bosch BFG 3000</h3>
+                  <h3>Перфоратор BOSCH BFG 3000</h3>
                   <div class="oldprice">22500 P.</div>
                   <div class="newprice">15500 Р.</div>
                 </li>
@@ -208,9 +207,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
+                    <img src="img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
                   </div>
-                  <h3>Перфоратор Bosch BFG 6000</h3>
+                  <h3>Перфоратор BOSCH BFG 6000</h3>
                   <div class="oldprice">30500 P.</div>
                   <div class="newprice">22500 Р.</div>
                 </li>
@@ -220,9 +219,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
+                    <img src="img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
                   </div>
-                  <h3>Перфоратор Bosch BFG 2000</h3>
+                  <h3>Перфоратор BOSCH BFG 2000</h3>
                   <div class="oldprice"></div>
                   <div class="newprice">12500 Р.</div>
                 </li>
@@ -232,9 +231,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
+                    <img src="img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
                   </div>
-                  <h3>Перфоратор Bosch BFG 3000</h3>
+                  <h3>Перфоратор BOSCH BFG 3000</h3>
                   <div class="oldprice">22500 P.</div>
                   <div class="newprice">15500 Р.</div>
                 </li>
@@ -244,9 +243,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
+                    <img src="img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
                   </div>
-                  <h3>Перфоратор Bosch BFG 6000</h3>
+                  <h3>Перфоратор BOSCH BFG 6000</h3>
                   <div class="oldprice">30500 P.</div>
                   <div class="newprice">22500 Р.</div>
                 </li>
@@ -256,9 +255,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
+                    <img src="img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
                   </div>
-                  <h3>Перфоратор Bosch BFG 2000</h3>
+                  <h3>Перфоратор BOSCH BFG 2000</h3>
                   <div class="oldprice"></div>
                   <div class="newprice">12500 Р.</div>
                 </li>
@@ -268,9 +267,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
+                    <img src="img/bfg_3000.jpg" alt="Перфоратор Bosch BFG 3000" width="127" height="112">
                   </div>
-                  <h3>Перфоратор Bosch BFG 3000</h3>
+                  <h3>Перфоратор BOSCH BFG 3000</h3>
                   <div class="oldprice">22500 P.</div>
                   <div class="newprice">15500 Р.</div>
                 </li>
@@ -280,9 +279,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
+                    <img src="img/bfg_6000.jpg" alt="Перфоратор Bosch BFG 6000" width="144" height="128">
                   </div>
-                  <h3>Перфоратор Bosch BFG 6000</h3>
+                  <h3>Перфоратор BOSCH BFG 6000</h3>
                   <div class="oldprice">30500 P.</div>
                   <div class="newprice">22500 Р.</div>
                 </li>
@@ -292,9 +291,9 @@
                     <a class="in-bookmarks" href="">В закладки</a>
                   </div>
                   <div class="popular-image">
-                    <img src="/img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
+                    <img src="img/bfg_2000.jpg" alt="Перфоратор Bosch BFG 2000" width="127" height="112">
                   </div>
-                  <h3>Перфоратор Bosch BFG 2000</h3>
+                  <h3>Перфоратор BOSCH BFG 2000</h3>
                   <div class="oldprice"></div>
                   <div class="newprice">12500 Р.</div>
                 </li>
@@ -387,14 +386,16 @@
   </section>
   </body>
      <script>
-      var buyLink = document.querySelector(".in-basket");
+    var buyLink = document.querySelectorAll(".in-basket");
     var buyPopup = document.querySelector(".modal-buy");
     var buyClose = buyPopup.querySelector(".modal-close");
-    buyLink.addEventListener("click", function(evt) {
-      evt.preventDefault();
-      buyPopup.classList.add("modal-show");
-    });
-    buyClose.addEventListener("click", function(evt) {
+    for (var i = 0; i < buyLink.length; i++) {
+    buyLink[i].addEventListener('click', function(evt) {
+    evt.preventDefault();
+    buyPopup.classList.add('modal-show');
+  });
+};
+      buyClose.addEventListener("click", function(evt) {
       evt.preventDefault();
       buyPopup.classList.remove("modal-show");
     });
